legal info page add

--- a/about-markets-terminal.html
+++ b/about-markets-terminal.html
@@ -504,7 +504,7 @@
             </div>
            </div>
            <div class="copyright-text">
-            <p>Copyright &copy; 2024 by <a href="index.html">markets terminal</a></p>
+            <p>Copyright &copy; 2024 by <a href="index.html">Andro Markets</a></p>
            </div>
          </footer>
         <!-- End Footer area -->
