--- a/champion-demo-contest-info.html
+++ b/champion-demo-contest-info.html
@@ -334,7 +334,7 @@
                   <!-- item -->
                   <div class="contest-guid-item d-flex">
                      <div class="contest-guid-info">
-                        <p>Log in or sign up on Markets Terminal</p>
+                        <p>Log in or sign up on Andro Markets</p>
                      </div>
                      <div class="contest-guid-title">
                         <h6>Step 1</h6>
@@ -673,7 +673,7 @@
             </div>
            </div>
            <div class="copyright-text">
-            <p>Copyright &copy; 2024 by <a href="index.html">markets terminal</a></p>
+            <p>Copyright &copy; 2024 by <a href="index.html">Andro Markets</a></p>
            </div>
          </footer>
         
