--- a/currency-pairs.html
+++ b/currency-pairs.html
@@ -705,8 +705,8 @@
             <div class="row align-items-center">
                <div class="col-md-7">
                   <div class="common-heading-area">
-                     <h3>markets terminal Gives You Advantage</h3>
-                     <p>Gain a competitive edge with markets terminal’s advanced tools and insights, helping you trade smarter and more effectively. </p>
+                     <h3>Andro Markets Gives You Advantage</h3>
+                     <p>Gain a competitive edge with Andro Markets’s advanced tools and insights, helping you trade smarter and more effectively. </p>
                   </div>
                </div>
                <div class="col-md-5">
@@ -1164,7 +1164,7 @@
             </div>
            </div>
            <div class="copyright-text">
-            <p>Copyright &copy; 2024 by <a href="index.html">markets terminal</a></p>
+            <p>Copyright &copy; 2024 by <a href="index.html">Andro Markets</a></p>
            </div>
          </footer>
         <!-- End Footer area -->
