--- a/demo-account.html
+++ b/demo-account.html
@@ -322,7 +322,7 @@
                            <p>Start trading with our demo account instantly, no deposit needed, and practice risk-free to sharpen your skills.</p>
                         </div>
                         <div class="demo-account-features-area">
-                           <h6>The markets terminal trading demo account boasts all the features of the real one.</h6>
+                           <h6>The Andro Markets trading demo account boasts all the features of the real one.</h6>
                            <ul>
                               <li class="mt-12"><p><b>Use it for free.</b> Test your trading strategies or bots and execute risk-free trades for as long as you want without any payments.</p></li>
                               <li class="mt-12"><p><b>Trade with real data.</b> While demo Forex trading is just a simulation, we still provide you with real market data free of charge.</p></li>
@@ -714,7 +714,7 @@
                            <h3>Compete in Demo Contests & Win Rewards</h3>
                            <p>Participate in our demo trading contests, sharpen your skills, and win exciting prizes while learning in a risk-free environment.</p>
                            <p><b>Champion Demo Contest</b></p>
-                           <p>Practice trading on your markets terminal demo account and win real money! Our monthly demo contest offers a $1,000 prize pool. First place wins $500, second place $300, and third place $100. Register a demo account now and compete using any trading strategies or EAs for a chance to win big.</p>
+                           <p>Practice trading on your Andro Markets demo account and win real money! Our monthly demo contest offers a $1,000 prize pool. First place wins $500, second place $300, and third place $100. Register a demo account now and compete using any trading strategies or EAs for a chance to win big.</p>
                         </div>
                         
                          <a href="#" class="primary-btn mt-40">Sign up for champion demo contest <span class="rotation ml-5"><i class="fa-solid fa-arrow-right"></i></span></a>
@@ -995,7 +995,7 @@
             </div>
            </div>
            <div class="copyright-text">
-            <p>Copyright &copy; 2024 by <a href="index.html">markets terminal</a></p>
+            <p>Copyright &copy; 2024 by <a href="index.html">Andro Markets</a></p>
            </div>
          </footer>
         
