--- a/deposits-withdrawals.html
+++ b/deposits-withdrawals.html
@@ -685,8 +685,8 @@
                <div class="col-lg-7">
                   <div class="secures-found-left lg-mr-22">
                      <div class="common-heading-area">
-                        <h3>Markets Terminal Secures Your Funds</h3>
-                        <p>Markets Terminal ensures your funds are protected with advanced security measures, offering peace of mind for safe and reliable trading.</p>
+                        <h3>Andro Markets Secures Your Funds</h3>
+                        <p>Andro Markets ensures your funds are protected with advanced security measures, offering peace of mind for safe and reliable trading.</p>
                      </div>
                      <img src="assets/images/thumbnails/found.png" alt="img" class="w-100 mt-30 rounded">
                   </div>
@@ -1050,7 +1050,7 @@
             </div>
            </div>
            <div class="copyright-text">
-            <p>Copyright &copy; 2024 by <a href="index.html">markets terminal</a></p>
+            <p>Copyright &copy; 2024 by <a href="index.html">Andro Markets</a></p>
            </div>
          </footer>
         <!-- End Footer area -->
