--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                <div class="col-md-7 col-lg-6">
                   <div class="section-content-box hero-area-content">
                      <h2>Unlock Your Trade with  <br>
-                        <span class="word"> markets terminal</span> 
+                        <span class="word"> Andro Markets</span> 
                         <span class="word">Title Here ...</span>
                         <span class="word">Title Here ...</span>
                      </h2>
@@ -386,7 +386,7 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="common-heading-area market-terminal-heading">
-                     <h3 class="text-center">Why with Markets Terminal?</h3>
+                     <h3 class="text-center">Why with Andro Markets?</h3>
                      <p class="text-center">Stake your Matic for daily staking rewards. Use Polygon or ETH chain to stake with Best-in-class validators</p>
                   </div>
                </div>
@@ -1168,7 +1168,7 @@
             </div>
            </div>
            <div class="copyright-text">
-            <p>Copyright &copy; 2024 by <a href="index.html">markets terminal</a></p>
+            <p>Copyright &copy; 2024 by <a href="index.html">Andro Markets</a></p>
            </div>
          </footer>
         <!-- End Footer area -->
