--- a/monitoring-details.html
+++ b/monitoring-details.html
@@ -322,7 +322,7 @@
                <div class="col-md-6">
                   <div class="trades-view-list h-100">
                      <ul>
-                        <li><h6 class="text-center">Markets Terminal</h6></li>
+                        <li><h6 class="text-center">Andro Markets</h6></li>
                         <li class="d-flex align-items-center justify-content-between"><p>Account gain</p> <p class="color-35">+14 857.81%</p></li>
                         <li class="d-flex align-items-center justify-content-between"><p>Daily</p> <p class="color-35">+14 857.81%</p></li>
                         <li class="d-flex align-items-center justify-content-between"><p>Monthly</p> <p class="color-35">+1 857.81%</p></li>
@@ -337,7 +337,7 @@
                <div class="col-md-6">
                   <div class="trades-view-list h-100">
                       <ul>
-                        <li><h6 class="text-center">Markets Terminal</h6></li>
+                        <li><h6 class="text-center">Andro Markets</h6></li>
                         <li class="d-flex align-items-center justify-content-between"><p>Total deposited</p> <p>$40.55</p></li>
                         <li class="d-flex align-items-center justify-content-between"><p>Total withdrawn</p> <p>$0.00</p></li>
                         <li class="d-flex align-items-center justify-content-between"><p>Bonus received</p> <p>$0.00</p></li>
@@ -367,7 +367,7 @@
                <div class="col-md-6">
                   <div class="trades-view-list h-100">
                      <ul>
-                        <li><h6 class="text-center">Markets Terminal</h6></li>
+                        <li><h6 class="text-center">Andro Markets</h6></li>
                         <li class="d-flex align-items-center justify-content-between"><p>Total trades</p> <p class="color-35">81</p></li>
                         <li class="d-flex align-items-center justify-content-between"><p>Winning trades</p> <p class="color-35">59 (73%)</p></li>
                         <li class="d-flex align-items-center justify-content-between"><p>Losing trades</p> <p class="color-e8">22 (27%)</p></li>
@@ -383,7 +383,7 @@
                <div class="col-md-6">
                   <div class="trades-view-list h-100">
                       <ul>
-                        <li><h6 class="text-center">Markets Terminal</h6></li>
+                        <li><h6 class="text-center">Andro Markets</h6></li>
                         <li class="d-flex align-items-center justify-content-between"><p>Average win</p> <p>$104.35 / 31.4 pips</p></li>
                         <li class="d-flex align-items-center justify-content-between"><p>Average loss</p> <p>-$148.95 / -33.3 pips</p></li>
                         <li class="d-flex align-items-center justify-content-between"><p>Average trade outcome</p> <p>$35.55 / 13.8 pips</p></li>
@@ -481,7 +481,7 @@
             </div>
            </div>
            <div class="copyright-text">
-            <p>Copyright &copy; 2024 by <a href="index.html">markets terminal</a></p>
+            <p>Copyright &copy; 2024 by <a href="index.html">Andro Markets</a></p>
            </div>
          </footer>
         
