--- a/platform-tutorials-articles.html
+++ b/platform-tutorials-articles.html
@@ -284,7 +284,7 @@
                            <li class="platform-tutorial-btn" onclick="platform_tutorial_articles(event, 'platform_tutorial_articles_item_5')">How to get your account verified <i class="fas fa-angle-double-down"></i></li>
                            <li class="platform-tutorial-btn" onclick="platform_tutorial_articles(event, 'platform_tutorial_articles_item_6')">How to use the MT Copy app <i class="fas fa-angle-double-down"></i></li>
                            <li class="platform-tutorial-btn" onclick="platform_tutorial_articles(event, 'platform_tutorial_articles_item_7')">How to use Autochartist Market reports <i class="fas fa-angle-double-down"></i></li>
-                           <li class="platform-tutorial-btn" onclick="platform_tutorial_articles(event, 'platform_tutorial_articles_item_8')">Trading indices with markets terminal <i class="fas fa-angle-double-down"></i></li>
+                           <li class="platform-tutorial-btn" onclick="platform_tutorial_articles(event, 'platform_tutorial_articles_item_8')">Trading indices with Andro Markets <i class="fas fa-angle-double-down"></i></li>
                            <li class="platform-tutorial-btn" onclick="platform_tutorial_articles(event, 'platform_tutorial_articles_item_9')">How to open a trading account with MT <i class="fas fa-angle-double-down"></i></li>
                            <li class="platform-tutorial-btn" onclick="platform_tutorial_articles(event, 'platform_tutorial_articles_item_10')">How to start trading in the MetaTrader 5 Mobile app <i class="fas fa-angle-double-down"></i></li>
                            <li class="platform-tutorial-btn" onclick="platform_tutorial_articles(event, 'platform_tutorial_articles_item_11')">How to trade cryptocurrency <i class="fas fa-angle-double-down"></i></li>
@@ -755,8 +755,8 @@
             <div class="row align-items-center gy-4">
                <div class="col-md-7">
                   <div class="common-heading-area">
-                     <h3>markets terminal Gives You Advantage</h3>
-                     <p>Gain a competitive edge with markets terminal’s advanced tools and insights, helping you trade smarter and more effectively.</p>
+                     <h3>Andro Markets Gives You Advantage</h3>
+                     <p>Gain a competitive edge with Andro Markets’s advanced tools and insights, helping you trade smarter and more effectively.</p>
                   </div>
                </div>
                <div class="col-md-5 text-center text-md-end">
@@ -879,7 +879,7 @@
             </div>
            </div>
            <div class="copyright-text">
-            <p>Copyright &copy; 2024 by <a href="index.html">markets terminal</a></p>
+            <p>Copyright &copy; 2024 by <a href="index.html">Andro Markets</a></p>
            </div>
          </footer>
         <!-- End Footer area -->
