--- a/index-2.html
+++ b/index-2.html
@@ -317,7 +317,7 @@
             </div>
            </div>
            <div class="copyright-text">
-            <p>Copyright &copy; 2024 by <a href="index.html">markets terminal</a></p>
+            <p>Copyright &copy; 2024 by <a href="index.html">Andro Markets</a></p>
            </div>
          </footer>
       <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
