--- a/message.html
+++ b/message.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Markets Terminal Chat</title>
+  <title>Andro Markets Chat</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   <script src="https://unpkg.com/feather-icons"></script> <!-- Feather icons for the send button -->
   <style>
@@ -131,7 +131,7 @@
   <div class="chat-box">
     <!-- Chat Header -->
     <div class="chat-header">
-      <h2>Markets Terminal</h2>
+      <h2>Andro Markets</h2>
       <div class="avatars">
         <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="user 1">
         <img src="https://randomuser.me/api/portraits/men/65.jpg" alt="user 2">
