--- a/see-all-conditions.html
+++ b/see-all-conditions.html
@@ -569,7 +569,7 @@
                               </div>
                               <div class="evaluation-item-value">
                                  <p>150+ countries</p>
-                                 <span>With Markets Terminal presence</span>
+                                 <span>With Andro Markets presence</span>
                               </div>
                            </div>
                         </div>
@@ -840,7 +840,7 @@
             </div>
            </div>
            <div class="copyright-text">
-            <p>Copyright &copy; 2024 by <a href="index.html">markets terminal</a></p>
+            <p>Copyright &copy; 2024 by <a href="index.html">Andro Markets</a></p>
            </div>
          </footer>
         <!-- End Footer area -->
