--- a/trding-tutorials-articles.html
+++ b/trding-tutorials-articles.html
@@ -498,8 +498,8 @@
             <div class="row align-items-center gy-4">
                <div class="col-md-7">
                   <div class="common-heading-area">
-                     <h3>markets terminal Gives You Advantage</h3>
-                     <p>Gain a competitive edge with markets terminal’s advanced tools and insights, helping you trade smarter and more effectively.</p>
+                     <h3>Andro Markets Gives You Advantage</h3>
+                     <p>Gain a competitive edge with Andro Markets’s advanced tools and insights, helping you trade smarter and more effectively.</p>
                   </div>
                </div>
                <div class="col-md-5 text-center text-md-end">
@@ -622,7 +622,7 @@
             </div>
            </div>
            <div class="copyright-text">
-            <p>Copyright &copy; 2024 by <a href="index.html">markets terminal</a></p>
+            <p>Copyright &copy; 2024 by <a href="index.html">Andro Markets</a></p>
            </div>
          </footer>
         <!-- End Footer area -->
