maintenance page add with animation.css create

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Tradding Web App</title>
+      <link rel="icon" type="image/x-icon" href="assets/images/favicon.webp">
       <link
          href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
          rel="stylesheet"
@@ -326,7 +327,7 @@
          </nav>
       </header>
       <!-- start hero area -->
-      <section class="hero-main-area">
+      <section class="hero-main-area" style="background: url('assets/images/bg/hero-bg.png');">
          <div class="container">
             <div class="row align-items-center">
                <div class="col-md-7 col-lg-6">
@@ -954,49 +955,54 @@
                   </div>
                </div>
             </div>
-            <div class="row mt-5">
+            <div class="row mt-3 gy-4">
                <div class="col-md-6">
-                  <div class="row gy-4">
-                     <div class="col-12">
-                        <div class="blog-post-card">
-                     <div class="card">
-                     <img src="assets/images/blog/blog1.png" class="card-img-top" alt="blog-image">
-                     <div class="card-body">
-                        <h5 class="card-title">Ease Of Doing Business</h5>
-                        <p class="card-text">Georgia has ranked 7th among 190 countries in the World Bank Doing Business 2020 ranking, preceding the states like the UK, Norway and Sweden.</p>
-                        <a href="blog-details.html">Learn More</a>
-                     </div>
-                     </div>
-                  </div>   
-                     </div>
-                     <div class="col-12">
-                        <div class="blog-post-card">
-                     <div class="card">
-                     <img src="assets/images/blog/blog1.png" class="card-img-top" alt="blog-image">
-                     <div class="card-body">
-                        <h5 class="card-title">Ease Of Doing Business</h5>
-                        <p class="card-text">Georgia has ranked 7th among 190 countries in the World Bank Doing Business 2020 ranking, preceding the states like the UK, Norway and Sweden.</p>
-                        <a href="blog-details.html">Learn More</a>
-                     </div>
-                     </div>
-                  </div>
-                     </div>
-                  </div>
-               </div>
-                <div class="col-md-6">
                   <div class="blog-post-card">
                      <div class="card">
-                     <img src="assets/images/blog/blog2.png" class="card-img-top" alt="blog-image">
-                     <div class="card-body">
-                        <h5 class="card-title">Developed Tourism Potential</h5>
-                        <p class="card-text">Georgia has ranked 7th among 190 countries in the World Bank Doing Business 2020 ranking, preceding the states like the UK, Norway and Sweden. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ultricies nibh a orci malesuada, at consectetur nibh elementum. Curabitur ultrices nulla ut auctor dapibus. Pellentesque posuere diam eget sapien tincidunt cursus. Donec et efficitur tellus. Quisque rutrum tincidunt lobortis. Praesent tempor tellus a mi tristique, Georgia has ranked 7th among 190 countries in the World Bank Doing Business 2020 ranking, preceding the states like the UK, Norway and Sweden. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ultricies nibh a orci malesuada, at consectetur nibh elementum. Curabitur ultrices nulla ut auctor dapibus. Pellentesque posuere diam .</p><br>
-                        <p>
-                           Georgia has ranked 7th among 190 countries in the World Bank Doing Business 2020 ranking, Georgia has ranked 7th among 190 countries in the World Bank Doing Business 2020 ranking,
-                        </p>
-                        <a href="blog-details.html">Learn More</a>
+                        <img src="assets/images/blog/blog4.png" class="w-100 rounded" alt="blog-image">
+                        <div class="card-body">
+                           <h5 class="card-title">Ease Of Doing Business</h5>
+                           <p class="card-text">Georgia has ranked 7th among 190 countries in the World Bank Doing Business 2020 ranking, preceding the states like the UK, Norway and Sweden.</p>
+                           <a href="blog-details.html">Learn More</a>
+                        </div>
                      </div>
+                  </div>   
+               </div>
+               <div class="col-md-6">
+                  <div class="blog-post-card">
+                     <div class="card">
+                        <img src="assets/images/blog/blog1.png" class="w-100 rounded" alt="blog-image">
+                        <div class="card-body">
+                           <h5 class="card-title">Ease Of Doing Business</h5>
+                           <p class="card-text">Georgia has ranked 7th among 190 countries in the World Bank Doing Business 2020 ranking, preceding the states like the UK, Norway and Sweden.</p>
+                           <a href="blog-details.html">Learn More</a>
+                        </div>
                      </div>
-                  </div>
+                  </div>   
+               </div>
+               <div class="col-md-6">
+                  <div class="blog-post-card">
+                     <div class="card">
+                        <img src="assets/images/blog/blog3.png" class="w-100 rounded" alt="blog-image">
+                        <div class="card-body">
+                           <h5 class="card-title">Ease Of Doing Business</h5>
+                           <p class="card-text">Georgia has ranked 7th among 190 countries in the World Bank Doing Business 2020 ranking, preceding the states like the UK, Norway and Sweden.</p>
+                           <a href="blog-details.html">Learn More</a>
+                        </div>
+                     </div>
+                  </div>   
+               </div>
+               <div class="col-md-6">
+                  <div class="blog-post-card">
+                     <div class="card">
+                        <img src="assets/images/blog/blog4.png" class="w-100 rounded" alt="blog-image">
+                        <div class="card-body">
+                           <h5 class="card-title">Ease Of Doing Business</h5>
+                           <p class="card-text">Georgia has ranked 7th among 190 countries in the World Bank Doing Business 2020 ranking, preceding the states like the UK, Norway and Sweden.</p>
+                           <a href="blog-details.html">Learn More</a>
+                        </div>
+                     </div>
+                  </div>   
                </div>
             </div>
          </div>
@@ -1165,6 +1171,16 @@
                   </div>
                  </div>
                </div>
+               <div class="col-md-12">
+                  <ul class="payment-method d-flex flex-wrap align-items-center justify-content-center g-10 mt-40">
+                     <li><a href="#"><img src="assets/images/banks/1.png" alt="icon"></a></li>
+                     <li><a href="#"><img src="assets/images/banks/1.png" alt="icon"></a></li>
+                     <li><a href="#"><img src="assets/images/banks/1.png" alt="icon"></a></li>
+                     <li><a href="#"><img src="assets/images/banks/1.png" alt="icon"></a></li>
+                     <li><a href="#"><img src="assets/images/banks/1.png" alt="icon"></a></li>
+                     <li><a href="#"><img src="assets/images/banks/1.png" alt="icon"></a></li>
+                  </ul>
+               </div>
             </div>
            </div>
            <div class="copyright-text">
@@ -1172,6 +1188,11 @@
            </div>
          </footer>
         <!-- End Footer area -->
+        <div class="warning-section">
+         <p>
+            <b class="color-red">Risk Warning:</b>
+             sit amet consectetur adipisicing elit. Consectetur eligendi maiores omnis. Cumque voluptates cum dolore ad impedit, placeat tempora aut voluptatum! Ad quod tempora exercitationem suscipit id aspernatur doloribus.</p>
+        </div> 
       <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
