--- a/blog-details.html
+++ b/blog-details.html
@@ -401,6 +401,12 @@
            </div>
          </footer>
         <!-- End Footer area -->
+         
+        <div class="warning-section">
+         <p> 
+            <b class="color-red">Risk Warning:</b>
+             sit amet consectetur adipisicing elit. Consectetur eligendi maiores omnis. Cumque voluptates cum dolore ad impedit, placeat tempora aut voluptatum! Ad quod tempora exercitationem suscipit id aspernatur doloribus.</p>
+        </div> 
       <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
