--- a/commodities.html
+++ b/commodities.html
@@ -349,8 +349,8 @@
            </section>
            <section class="potential-section mt-100">
             <div class="container">
-               <div class="row align-items-center">
-                  <div class="col-md-7">
+               <div class="row align-items-center gy-4 ">
+                  <div class="col-lg-7">
                      <div class="potential-left-area lg-mr-22">
                         <div class="common-heading-area mb-30">
                            <h3>Why trade commodities with MT</h3>
@@ -397,7 +397,7 @@
                          
                      </div>
                   </div>
-                  <div class="col-md-5">
+                  <div class="col-lg-5">
                      <div class="potential-thumbnail">
                         <img src="assets/images/thumbnails/market-history.png" alt="img" class="w-100 rounded">
                      </div>
@@ -524,6 +524,7 @@
                              </tr>
                            </thead>
                            <tbody>
+                               
                               <tr>
                                  <td class="text-start">XAUUSD</td>
                                  <td class="text-start">Gold on Spot</td>
@@ -930,6 +931,11 @@
            </div>
          </footer>
         <!-- End Footer area -->
+        <div class="warning-section">
+         <p> 
+            <b class="color-red">Risk Warning:</b>
+             sit amet consectetur adipisicing elit. Consectetur eligendi maiores omnis. Cumque voluptates cum dolore ad impedit, placeat tempora aut voluptatum! Ad quod tempora exercitationem suscipit id aspernatur doloribus.</p>
+        </div> 
       <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
