create account step section add

--- a/index.html
+++ b/index.html
@@ -405,7 +405,17 @@
                            </div>
                         </div>
                         <!-- item -->
-                        <div class="market-about-card mt130">
+                        <div class="market-about-card  mt-5">
+                           <div class="about-card-logo">
+                              <img src="assets/images/icon/coin-5.png" alt="icon">
+                           </div>
+                           <div class="about-card-content">
+                              <h4>Fast Transaction</h4>
+                              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Dui id lobortis pretium blandit.</p>
+                           </div>
+                        </div>
+                         <!-- item -->
+                         <div class="market-about-card mt-5">
                            <div class="about-card-logo">
                               <img src="assets/images/icon/coin2.png" alt="icon">
                            </div>
@@ -422,6 +432,16 @@
                         <!-- item -->
                         <div class="market-about-card">
                            <div class="about-card-logo">
+                              <img src="assets/images/icon/coin-6.png" alt="icon">
+                           </div>
+                           <div class="about-card-content">
+                              <h4>Secure Trading</h4>
+                              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Dui id lobortis pretium blandit.</p>
+                           </div>
+                        </div>
+                        <!-- item -->
+                        <div class="market-about-card mt-5">
+                           <div class="about-card-logo">
                               <img src="assets/images/icon/coin3.png" alt="icon">
                            </div>
                            <div class="about-card-content">
@@ -430,7 +450,7 @@
                            </div>
                         </div>
                         <!-- item -->
-                        <div class="market-about-card mt130">
+                        <div class="market-about-card mt-5">
                            <div class="about-card-logo">
                               <img src="assets/images/icon/coin4.png" alt="icon">
                            </div>
@@ -661,8 +681,85 @@
          </div>
        </section>
        <!-- End market evaluation -->
-        <!-- Start trading area -->
-         <section class="master-trading-area mt-100">
+        <!-- Start account step -->
+        <!-- Start account step -->
+         <section class="create-account-section mt-100">
+            <div class="container">
+               <div class="row align-items-center gy-4">
+                  <div class="col-md-7">
+                     <div class="common-heading-area">
+                        <h3>Create an Account in 4 Easy Step</h3>
+                        <p>Create your account effortlessly in just four steps, ensuring a seamless, secure, and fast onboarding process for hassle-free trading access. </p>
+                     </div>
+                  </div>
+                  <div class="col-md-5">
+                     <div class="text-md-end text-center">
+                        <a href="#" class="primary-btn">Register Now</a>
+                     </div>
+                  </div>
+               </div>
+               <div class="row gy-4 mt-5">
+                  <div class="col-xl-3 col-lg-4 col-sm-6">
+                     <div class="evaluation-item account-step position-relative">
+                        <div class="evaluation-item-title">
+                           <img src="assets/images/icon/user-plus.png" alt="img">
+                        </div>
+                        <div class="evaluation-item-value mt-20">
+                           <span>Register</span>
+                           <p class="text-start mt-1">Choose an account type, fill out a secure application, and create your profile to start trading instantly.</p>
+                        </div>
+                        <span class="account-step-number">
+                           01
+                        </span>
+                     </div>
+                  </div>
+                  <div class="col-xl-3 col-lg-4 col-sm-6">
+                     <div class="evaluation-item account-step position-relative">
+                        <div class="evaluation-item-title">
+                           <img src="assets/images/icon/verify.png" alt="img">
+                        </div>
+                        <div class="evaluation-item-value mt-20">
+                           <span>Verify</span>
+                           <p class="text-start mt-1">Complete a digital identity verification, ensuring security and compliance, allowing you to access trading features quickly.  </p>
+                        </div>
+                        <span class="account-step-number">
+                           02
+                        </span>
+                     </div>
+                  </div>
+                  <div class="col-xl-3 col-lg-4 col-sm-6">
+                     <div class="evaluation-item account-step position-relative">
+                        <div class="evaluation-item-title">
+                           <img src="assets/images/icon/money.png" alt="img">
+                        </div>
+                        <div class="evaluation-item-value mt-20">
+                           <span>Verify</span>
+                           <p class="text-start mt-1">Deposit funds securely using multiple payment options, ensuring seamless transactions for uninterrupted trading.  </p>
+                        </div>
+                        <span class="account-step-number">
+                           03
+                        </span>
+                     </div>
+                  </div>
+                  <div class="col-xl-3 col-lg-4 col-sm-6">
+                     <div class="evaluation-item account-step position-relative">
+                        <div class="evaluation-item-title">
+                           <img src="assets/images/icon/trade.png" alt="img">
+                        </div>
+                        <div class="evaluation-item-value mt-20">
+                           <span>Trade</span>
+                           <p class="text-start mt-1">Begin live trading, explore 2,100+ instruments, and execute strategies to maximize your investments successfully.    </p>
+                        </div>
+                        <span class="account-step-number">
+                           04
+                        </span>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </section>
+        <!-- End trading area -->
+         <section class="master-trading-area mt-100 d-none">
             <div class="container">
                 <div class="row gy-4 align-items-center">
                      <div class="col-xl-7">
