--- a/index.html
+++ b/index.html
@@ -1278,6 +1278,10 @@
                      <li><a href="#"><img src="assets/images/banks/1.png" alt="icon"></a></li>
                   </ul>
                </div>
+               <div class="col-md-12 mt-4">
+                  <p class="text-white">Legal Information: BigBull Capital LLC. Registered address: Suite 305, Griffith Corporate Centre, Beachmont, Kingstown, S.t Vincent and the Grenadines. Registration number: 3846 LLC 2024
+                  </p>
+               </div>
             </div>
            </div>
            <div class="copyright-text">
