layout & social link add

--- a/maintenance.html
+++ b/maintenance.html
@@ -71,14 +71,15 @@
                         </div>
                         <div class="social-menu ms-3">
                            <ul class="d-flex align-items-center">
-                              <li><a href="#"><i class="fa fab fa-facebook"></i></a></li>
-                              <li><a href="#">
-                                 <i class="fa fab fa-twitter"></i>
+                              <li><a href="https://www.facebook.com/AndroMarkets/"><i class="fa fab fa-facebook"></i></a></li>
+                              <li><a href="https://x.com/i/flow/login?redirect_after_login=%2Fandro_markets">
+                                 <i class="fa-brands fa-x-twitter"></i>
                               </a></li>
-                              <li><a href="#">
-                                 <i class="fa fab fa-instagram"></i>
+                              <li><a href="https://t.me/AndroMarkets">
+                                 <i class="fa-brands fa-telegram"></i>
                               </a></li>
-                              <li><a href="#"><i class="fa fab fa-linkedin-in"></i></a></li>
+                              <li><a href="https://www.instagram.com/andromarkets/"><i class="fa-brands fa-instagram"></i></a></li>
+                              <li><a href="https://www.tradingview.com/u/AndroMarkets/"><img src="assets/images/icon/tading-view.png" alt="icon"></a></li>
                            </ul>
                         </div>
                      </div>
