image update & class change

--- a/champion-demo-contest-info.html
+++ b/champion-demo-contest-info.html
@@ -573,7 +573,7 @@
                          
                       </table>
                       <ul class="d-flex align-items-center justify-content-between mt-30 table-pagination">
-                        <li class="d-inline"><button class="tab-btn active video-controlls-previous"><i class="fas fa-arrow-left"></i> Previous</button></li>
+                        <li class="d-inline"><button class="tab-btn active video-controls-previous"><i class="fas fa-arrow-left"></i> Previous</button></li>
                         <li>
                            <ul class="d-flex align-items-center pagination-inner g-5">
                               <li><button class="active">1</button></li>
