--- a/forex-basics-videos.html
+++ b/forex-basics-videos.html
@@ -350,7 +350,7 @@
                               <p>In this lesson, you will learn:.</p>
                            </div>
                            <ul class="d-flex align-items-center justify-content-between mt-30 video-controlls">
-                              <li class="d-inline"><button class="tab-btn active video-controlls-previous"><i class="fas fa-arrow-left"></i> Previous Lesson</button></li>
+                              <li class="d-inline"><button class="tab-btn active video-controls-previous"><i class="fas fa-arrow-left"></i> Previous Lesson</button></li>
                               <li class="d-inline"><button class="tab-btn active">Next Lesson <i class="fas fa-arrow-right"></i></button></li>
                            </ul>
                         </div>
