--- a/index.html
+++ b/index.html
@@ -345,9 +345,9 @@
                      </div>
                   </div>
                </div>
-               <div class="col-lg-6">
+               <div class="col-lg-6 offset-md-2 col-md-8 offset-lg-0">
                   <div class="hero-area-thumbnails text-lg-end text-center">
-                     <img src="assets/images/thumbnails/hero.webp" alt="img">
+                     <img src="assets/images/thumbnails/hero.webp" alt="img" class="w-100">
                   </div>
                </div>
             </div>
