--- a/monitoring.html
+++ b/monitoring.html
@@ -720,7 +720,7 @@
                         </tbody>
                       </table>
                       <ul class="d-flex align-items-center justify-content-between mt-30 table-pagination">
-                        <li class="d-inline"><button class="tab-btn active video-controlls-previous"><i class="fas fa-arrow-left"></i> Previous</button></li>
+                        <li class="d-inline"><button class="tab-btn active video-controls-previous"><i class="fas fa-arrow-left"></i> Previous</button></li>
                         <li>
                            <ul class="d-flex align-items-center pagination-inner g-5">
                               <li><button class="active">1</button></li>
@@ -1114,7 +1114,7 @@
                         </tbody>
                       </table>
                       <ul class="d-flex align-items-center justify-content-between mt-30 table-pagination">
-                        <li class="d-inline"><button class="tab-btn active video-controlls-previous"><i class="fas fa-arrow-left"></i> Previous</button></li>
+                        <li class="d-inline"><button class="tab-btn active video-controls-previous"><i class="fas fa-arrow-left"></i> Previous</button></li>
                         <li>
                            <ul class="d-flex align-items-center pagination-inner g-5">
                               <li><button class="active">1</button></li>
@@ -1508,7 +1508,7 @@
                         </tbody>
                       </table>
                       <ul class="d-flex align-items-center justify-content-between mt-30 table-pagination">
-                        <li class="d-inline"><button class="tab-btn active video-controlls-previous"><i class="fas fa-arrow-left"></i> Previous</button></li>
+                        <li class="d-inline"><button class="tab-btn active video-controls-previous"><i class="fas fa-arrow-left"></i> Previous</button></li>
                         <li>
                            <ul class="d-flex align-items-center pagination-inner g-5">
                               <li><button class="active">1</button></li>
