--- a/maintenance.html
+++ b/maintenance.html
@@ -293,10 +293,10 @@
                      <div class="common-heading-area text-center text-lg-start">
                         <h2>The Website Under <span class="color-f5">Maintenance</span>
                          </h2>
-                        <p class="text-white">We are currently performing scheduled updates to improve our services. The website will be back soon. Thank you for your patience!</p>
+                        <p class="text-white">We are currently performing scheduled updates to enhance our services. The website will be back soon. Thank you for your patience!</p>
                      </div>
                      <div class="countdown-area mt-30 text-center text-lg-start">
-                        <h5 class="text-white">Your beloved site will bw available in: </h5>
+                        <h5 class="text-white">Your beloved site will be available in:</h5>
                         <ul class="d-flex align-items-center g-20 mt-2 justify-content-center justify-content-lg-start">
                            <li class="d-flex flex-column justify-content-center">
                               <span class="time-value">03</span>
