account step image animation add

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
          />
          <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.css">
       <link rel="stylesheet" href="assets/css/common.css" />
+      <link rel="stylesheet" href="assets/css/animation.css" />
       <link rel="stylesheet" href="assets/css/style.css" />
       <link rel="stylesheet" href="assets/css/responsive.css" />
    </head>
@@ -702,14 +703,23 @@
                </div>
                <div class="row align-items-center gy-4 mt-5">
                   <div class="col-lg-5 offset-md-3 col-md-6 offset-lg-0">
-                     <div class="account-step-thumnail mr-22   mt-lg-0">
-                         <img src="assets/images/thumbnails/mobile-app.png" alt="logo" class="w-100 account-step-thumbnails" id="step1">
-                         <img src="assets/images/thumbnails/how-to-m1.png" alt="logo" class="w-100 account-step-thumbnails" id="step2">
-                         <img src="assets/images/thumbnails/how-to-m2.png" alt="logo" class="w-100 account-step-thumbnails" id="step3">
-                         <img src="assets/images/thumbnails/how-to-m5.png" alt="logo" class="w-100 account-step-thumbnails" id="step4">
+                     <div class="mr-22 mt-lg-0">
+                         <div class="account-step-image">
+                           <img src="assets/images/thumbnails/mobile-app.png" alt="logo" class="w-100 account-step-thumbnails zoom-in" id="step1">
+                         </div>
+                         <div class="account-step-image">
+                           <img src="assets/images/thumbnails/how-to-m1.png" alt="logo" class="w-100 account-step-thumbnails zoom-in" id="step2">
+                         </div>
+                         <div class="account-step-image">
+                           <img src="assets/images/thumbnails/how-to-m2.png" alt="logo" class="w-100 account-step-thumbnails zoom-in" id="step3">
+                         </div>
+                         <div class="account-step-image">
+                           <img src="assets/images/thumbnails/how-to-m5.png" alt="logo" class="w-100 account-step-thumbnails zoom-in" id="step4">
+                         </div>
+
                      </div>
                   </div>
-                  <div class="col-lg-7  ">
+                  <div class="col-lg-7">
                      
                      <div class="step-item-box d-flex flex-column g-20">
                         <!-- item -->
