--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@
                         <div class="evaluation-item d-flex align-items-center justify-content-between">
                            <div class="evaluation-item-title d-flex align-items-center">
                               <img src="assets/images/icon/account.png" alt="img">
-                              <span>Advanced MT5 </span>
+                              <span class="text-start">Advanced MT5 </span>
                            </div>
                            <div class="evaluation-item-value">
                               <p>Trade with Confidence</p>
@@ -650,7 +650,7 @@
                         <div class="evaluation-item d-flex align-items-center justify-content-between">
                            <div class="evaluation-item-title d-flex align-items-center">
                               <img src="assets/images/icon/money.png" alt="img">
-                              <span>AM Terminal</span>
+                              <span class="text-start">AM Terminal</span>
                            </div>
                            <div class="evaluation-item-value">
                               <p> Next-level Trading Experience</p>
@@ -660,7 +660,7 @@
                         <div class="evaluation-item d-flex align-items-center justify-content-between">
                            <div class="evaluation-item-title d-flex align-items-center">
                               <img src="assets/images/icon/partner.png" alt="img">
-                              <span>Market Master</span>
+                              <span class="text-start">Market Master</span>
                            </div>
                            <div class="evaluation-item-value">
                               <p>Earn with Experts</p>
@@ -670,13 +670,12 @@
                         <div class="evaluation-item d-flex align-items-center justify-content-between">
                            <div class="evaluation-item-title d-flex align-items-center">
                               <img src="assets/images/icon/chart.png" alt="img">
-                              <span>Ethical Trading</span>
+                              <span class="text-start">Ethical Trading</span>
                            </div>
                            <div class="evaluation-item-value">
                               <p> Invest and Grow</p>
                            </div>
                         </div>
-                        
                      </div>
                   </div>
                </div>
